# COMPUTER_PRACTICE

./: README.md
Лабараторная работа 5/: server.go  withfastapi.py  withflask.py  withoutanything.py
Лабораторная работа 1/: README.md
Лабораторная работа 3/: package-lock.json  package.json  webpack.config.js
Лабораторная работа 3/src/: index.js  styles.scss
Лабораторная работа 4/: zadanie
Лабораторная работа 6/: main.py
Лабораторная работа 7/: README.md  main.py  pyproject.toml
Лабораторная работа 7/templates/: displayimage.html  makeimage.html
